@@ -2,6 +2,16 @@
 
         Reviewed by Eric Seidel.
 
+        Implement special optgroup processing
+        https://bugs.webkit.org/show_bug.cgi?id=41556
+
+        * html/HTMLTreeBuilder.cpp:
+        (WebCore::HTMLTreeBuilder::processStartTag):
+
+2010-07-02  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         Handle <image> in new parser
         https://bugs.webkit.org/show_bug.cgi?id=41555
 
